# Emscripten-Instancing-Test

./: CMakeLists.txt  README.md
assets/shaders/: instanced.frag  instanced.vert  normal.frag  normal.vert
source/: InstancingTest.cpp  InstancingTest.h  Window.cpp  Window.h  main.cpp
source/util/: Logger.cpp  Logger.h
